--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
+    "contentlayer": "^0.3.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.9.5",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^0.11.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
