--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
-    "contentlayer": "^0.3.4",
+    "@next/mdx": "^15.1.7",
+    "@types/mdx": "^2.0.13",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.9.5",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "shiki": "^0.11.1"
+    "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
