--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,16 +23,9 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".contentlayer/generated"
-, "contentlayer.config.ts"  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "paths": {
-    "@/*": ["./*"],
-    "contentlayer/generated": ["./.contentlayer/generated"]
+    "@/*": ["./*"]
   },
   "exclude": ["node_modules"]
 }
