--- a/package.json
+++ b/package.json
@@ -6,32 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
-    "@next/mdx": "^15.1.7",
-    "@types/mdx": "^2.0.13",
+    "contentlayer2": "^0.5.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-contentlayer2": "^0.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.9.5",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^0.11.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prettier": "3.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
