--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,17 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".contentlayer/generated",
+    "contentlayer.config.ts"
+  ],
   "paths": {
-    "@/*": ["./*"]
+    "@/*": ["./*"],
+    "contentlayer/generated": ["./.contentlayer/generated"]
   },
   "exclude": ["node_modules"]
 }
