--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.4",
@@ -28,9 +30,11 @@
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-img-size": "^1.0.1",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "shiki": "^0.11.1",
+    "remark-parse": "^11.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
