--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rehype-pretty/transformers": "^0.13.2",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.4",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.12.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "next-contentlayer2": "^0.5.4",
     "next-themes": "^0.4.4",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
