--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.4",
     "dotenv": "^16.4.7",
+    "http-status-codes": "^2.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-auth": "^4.24.7",
