--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     "contentlayer.config.ts"
-  ],
+, "content/object-oriented-programming/05-abstraction-and-interfaces.mdx"  ],
   "exclude": ["node_modules"]
 }
